added multiple pages and 2nd css file

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html >
+<html>
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>niconijland.com</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -18,7 +19,7 @@
        <header class="theme-grey l-grid__item l-grid">
           <nav>
             <ul>
-              <li class="logo">NICO<span>NIJLAND</span>.COM - Front<span>End</span>Developer</li>
+              <li><a href="index.html" class="logo">NICO<span class="bold">NIJLAND</span>.COM <span class="hyphen">-</span> Front<span class="bold">End</span>Developer</a></li>
               <li class="burger-container">
                 <a class="burger-nav">
                   <span>&nbsp</span>
@@ -28,9 +29,9 @@
               </li>
             </ul>
             <ul class="menu-content">
-              <li><a href="#" class="nav-item">About</a></li>
-              <li><a href="#" class="nav-item active">Portfolio</a></li>
-              <li><a href="#" class="nav-item">Contact</a></li>
+              <li><a href="about.html" class="nav-item">About</a></li>
+              <li><a href="work.html" class="nav-item">Work</a></li>
+              <li><a href="contact.html" class="nav-item">Contact</a></li>
             </ul>
           </nav>
         </header>
@@ -63,15 +64,16 @@
 
            <div class="item-five theme-black l-grid l-grid__item align-center">
              <div class="content">
-               <h2 class="heading">Grey</h2>
+               <h2 class="heading">"The code is red... long live the code!" - Napalm Death</h2>
              </div>
            </div>
 
            <footer class="theme-grey l-grid__item l-grid">
              <div class="footer-content">
                <ul>
-                 <li><a href="#" class="nav-item social"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
-                 <li><a href="#" class="nav-item social"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                 <li><a href="https://www.facebook.com/NicoNijland" class="nav-social"><i class="fa fa-facebook-official" aria-hidden="true"></i></a></li>
+                 <li><a href="https://nl.linkedin.com/in/nico-nijland" class="nav-social"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                 <li><a href="https://github.com/nijlanderthaler" class="nav-social"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
                </ul>
              </div>
           </footer>
