--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       This demo requires CSS Grid. The current browser you're using doesn't support it and is using a Flexbox fallback. Find a <a href="https://igalia.github.io/css-grid-layout/enable.html">grid-enabled browser</a>.
     </div>
 
-    <div class="l-grid l-grid--4x4 l-full-height">
-       <header class="theme-grey l-grid__item l-grid">
+    <div class="grid grid-4x4 full-height">
+       <header class="theme-grey grid grid-item">
           <nav>
             <ul>
               <li><a href="index.html" class="logo">NICO<span class="bold">NIJLAND</span>.COM <span class="hyphen">-</span> Front<span class="bold">End</span>Developer</a></li>
@@ -35,24 +35,24 @@
             </ul>
           </nav>
         </header>
-           <div class="item-one img-background img-background--fwwu align-center l-grid__item l-grid">
+           <div class="item-one img-background img-background-fwwu align-center grid grid-item">
              <div class="content">
                <h2 class="heading">FWWU</h2>
              </div>
            </div>
 
-           <div class="item-two img-background img-background--wester l-grid__item l-grid align-center">
+           <div class="item-two img-background img-background-wester align-center grid grid-item">
              <div class="content tooltip">
                <h2 class="heading">Westerpark<span class="tooltiptext">Placeholder image. Yes, I like landscape pictures very much.</span></h2></div>
            </div>
 
-           <div class="item-three img-background img-background--fecamp align-center l-grid l-grid__item">
+           <div class="item-three img-background img-background-fecamp align-center grid grid-item">
              <div class="content">
                <h2 class="heading">Fecamp</h2>
              </div>
            </div>
 
-           <div class="item-four theme-black l-grid l-grid__item align-center">
+           <div class="item-four theme-black align-center grid grid-item">
              <div class="content">
                 <h2 class="heading">
                  Dark grey Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis eius totam tempora minima, odit delectus in aliquid molestiae dolore reprehenderit eos saepe earum soluta atque nobis asperiores sed sequi quo ad
@@ -61,13 +61,13 @@
              </div>
            </div>
 
-           <div class="item-five theme-black l-grid l-grid__item align-center">
+           <div class="item-five theme-black align-center grid grid-item">
              <div class="content">
                <h2 class="heading">"The code is red... long live the code!" - Napalm Death</h2>
              </div>
            </div>
 
-           <footer class="theme-grey l-grid__item l-grid">
+           <footer class="theme-grey grid grid-item">
              <div class="footer-content">
                <ul>
                  <li><a href="https://www.facebook.com/NicoNijland" class="nav-social"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
