--- a/work.html
+++ b/work.html
@@ -16,8 +16,8 @@
       This demo requires CSS Grid. The current browser you're using doesn't support it and is using a Flexbox fallback. Find a <a href="https://igalia.github.io/css-grid-layout/enable.html">grid-enabled browser</a>.
     </div>
 
-    <div class="l-grid l-grid--4x4 l-full-height">
-       <header class="theme-grey l-grid__item l-grid">
+    <div class="grid grid-4x4 full-height">
+       <header class="theme-grey grid grid-item">
           <nav>
             <ul>
               <li><a href="index.html" class="logo">NICO<span class="bold">NIJLAND</span>.COM <span class="hyphen">-</span> Front<span class="bold">End</span>Developer</a></li>
@@ -39,8 +39,8 @@
         </header>
         <div class="alt-bg">
           <div class="grid-portfolio">
-            <section class="demo_wrapper">
-        			<article class="demo_block">
+            <section class="portfolio-wrapper">
+        			<article class="portfolio-block">
         				<a href="#glob" class="sl-control prev">Prev</a> / <a href="#glob" class="sl-control next">Next</a>
         		    || <a href="#glob" class="sl-control stop">Stop</a> | <a href="#glob" class="sl-control start">Start</a>
                   <ul id="demo1">
@@ -52,7 +52,7 @@
         		</section>
           </div>
         </div>
-        <footer class="theme-grey l-grid__item l-grid">
+        <footer class="theme-grey grid grid-item">
           <div class="footer-content">
             <ul>
               <li><a href="#" class="nav-social"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
