--- a/about.html
+++ b/about.html
@@ -38,11 +38,10 @@
         </header>
         <div class="alt-bg">
           <div class="grid-article full-height">
-          <article class="grid-wrapper">
+          <article class="article-wrapper">
             <div class="article-title">
               <h1 class="article-title-top">Tank</h1>
               <h1 class="article-title-top-2">Talk <span class="title-text">with Nico Nijland</span></h1>
-              <!--<h2 class="article-title-bottom">With Nico Nijland</h2>-->
             </div>
             <div class="article-subtitle">
               <h2>The front end of a... tank?</h2>
@@ -72,9 +71,9 @@
           <footer class="theme-grey grid grid-item fixed-bottom">
             <div class="footer-content">
               <ul>
-                <li><a href="#" class="nav-social"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-                <li><a href="#" class="nav-social"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                <li><a href="#" class="nav-social"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/NicoNijland" class="nav-social"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+                <li><a href="https://nl.linkedin.com/in/nico-nijland" class="nav-social"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+                <li><a href="https://github.com/nijlanderthaler" class="nav-social"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
               </ul>
             </div>
          </footer>
