--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1"><!--minimum-scale=1?-->
     <title>niconijland.com</title>
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville:400,700|Raleway" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -41,9 +41,9 @@
             <div class="contact-social-wrapper">
               <div class="social-block">
                 <ul>
-                  <li><a href="#" class="nav-social-contact"><i class="fa fa-facebook-square" aria-hidden="true"></i> <p class="social-text">Like me on Facebook</p></a></li>
-                  <li><a href="#" class="nav-social-contact"><i class="fa fa-linkedin-square" aria-hidden="true"></i> <p class="social-text">Connect on LinkedIn</p></a></li>
-                  <li><a href="#" class="nav-social-contact"><i class="fa fa-github-square" aria-hidden="true"></i> <p class="social-text">Visit me on GitHub</p></a></li>
+                  <li><a href="https://www.facebook.com/NicoNijland" class="nav-social-contact"><i class="fa fa-facebook-square" aria-hidden="true"></i> <p class="social-text">Like me on Facebook</p></a></li>
+                  <li><a href="https://nl.linkedin.com/in/nico-nijland" class="nav-social-contact"><i class="fa fa-linkedin-square" aria-hidden="true"></i> <p class="social-text">Connect on LinkedIn</p></a></li>
+                  <li><a href="https://github.com/nijlanderthaler" class="nav-social-contact"><i class="fa fa-github-square" aria-hidden="true"></i> <p class="social-text">Visit me on GitHub</p></a></li>
                 </ul>
               </div>
             </div>
@@ -62,12 +62,12 @@
             </div>
           </div>
         </div>
-        <footer class="theme-grey grid grid-item fixed-bottom">
+        <footer class="theme-grey grid grid-item">
           <div class="footer-content">
             <ul>
-              <li><a href="#" class="nav-social"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-              <li><a href="#" class="nav-social"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-              <li><a href="#" class="nav-social"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.facebook.com/NicoNijland" class="nav-social"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+              <li><a href="https://nl.linkedin.com/in/nico-nijland" class="nav-social"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+              <li><a href="https://github.com/nijlanderthaler" class="nav-social"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
             </ul>
           </div>
        </footer>
