--- a/index.html
+++ b/index.html
@@ -35,48 +35,53 @@
             </ul>
           </nav>
         </header>
-           <div class="item-one img-background img-background-fwwu align-center grid grid-item">
-             <div class="content">
-               <h2 class="heading">FWWU</h2>
-             </div>
-           </div>
-
-           <div class="item-two img-background img-background-wester align-center grid grid-item">
-             <div class="content tooltip">
-               <h2 class="heading">Westerpark<span class="tooltiptext">Placeholder image. Yes, I like landscape pictures very much.</span></h2></div>
-           </div>
-
-           <div class="item-three img-background img-background-fecamp align-center grid grid-item">
-             <div class="content">
-               <h2 class="heading">Fecamp</h2>
-             </div>
-           </div>
-
-           <div class="item-four theme-black align-center grid grid-item">
-             <div class="content">
-                <h2 class="heading">
-                 Dark grey Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis eius totam tempora minima, odit delectus in aliquid molestiae dolore reprehenderit eos saepe earum soluta atque nobis asperiores sed sequi quo ad
-                  magnam esse culpa quae impedit porro. Eos voluptas, ab. Lorem ipsum dolor sit amet, consectetur adipisicing elit. At sit, porro quam natus quas facilis ab! Quo, sint, tenetur, aperiam dolorem a consequuntur natus ipsam id ipsum labore maxime error.
-                </h2>
-             </div>
-           </div>
-
-           <div class="item-five theme-black align-center grid grid-item">
-             <div class="content">
-               <h2 class="heading">"The code is red... long live the code!" - Napalm Death</h2>
-             </div>
-           </div>
-
-           <footer class="theme-grey grid grid-item">
-             <div class="footer-content">
-               <ul>
-                 <li><a href="https://www.facebook.com/NicoNijland" class="nav-social"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-                 <li><a href="https://nl.linkedin.com/in/nico-nijland" class="nav-social"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-                 <li><a href="https://github.com/nijlanderthaler" class="nav-social"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
-               </ul>
-             </div>
-          </footer>
+        <div class="items item-one img-background img-background-fwwu align-center grid grid-item">
+          <a href="http://www.firewalkwithus.com"><div class="overlay">
+            <h2 class="heading img-text">firewalkwithus.com</h2>
+          </div></a>
         </div>
+
+        <div class="items item-two img-background img-background-wester align-center grid grid-item">
+          <div class="overlay">
+            <h2 class="heading img-text placeholder">placeholder image for future content</h2>
+          </div>
+        </div>
+
+        <div class="items item-three img-background img-background-fecamp align-center grid grid-item">
+          <div class="overlay">
+            <h2 class="heading img-text placeholder">placeholder image for future content</h2>
+          </div>
+        </div>
+
+        <div class="item-four theme-black align-center grid grid-item">
+          <div class="content">
+             <h2 class="heading">
+               Welcome to niconijland.com. What you see here is my personal site. It’s made with CSS Grid.
+               This technique rules! I’m a historian gone frond end developer. Sounds far-fetched?
+               Well, I went from language to code. That’s certainly a big jump. On the other hand,
+               I’m still knee-deep in characters and information. I like that, I might be nuts.
+               Dutch speakers can go to my about section for more info.
+             </h2>
+          </div>
+        </div>
+
+        <div class="item-five theme-black align-center grid grid-item">
+          <div class="content">
+            <h2 class="heading">As you can see, I like amazing landscape views. I don't like mobile landscape
+              views that much, they tend to behave in unexpected, mysterious ways.</h2>
+          </div>
+        </div>
+
+        <footer class="theme-grey grid grid-item">
+          <div class="footer-content">
+            <ul>
+              <li><a href="https://www.facebook.com/NicoNijland" class="nav-social"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+              <li><a href="https://nl.linkedin.com/in/nico-nijland" class="nav-social"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+              <li><a href="https://github.com/nijlanderthaler" class="nav-social"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+            </ul>
+          </div>
+       </footer>
+    </div>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
     <script src="scripts/main.js"></script>
   </body>
