--- a/work.html
+++ b/work.html
@@ -44,9 +44,13 @@
         				<a href="#glob" class="sl-control prev">Prev</a> / <a href="#glob" class="sl-control next">Next</a>
         		    || <a href="#glob" class="sl-control stop">Stop</a> | <a href="#glob" class="sl-control start">Start</a>
                   <ul id="demo1">
-            				<li class="container-img"><a href="http://www.firewalkwithus.com"><img src="img/fwwu-com.jpg" alt="firewalkwithus.com <a href='http://www.firewalkwithus.com'>» go!</a>"></a></li>
-            				<li class="container-img"><a href="#slide2"><img src="img/fwwu-fecamp2.jpeg" alt="Seaside View, Fecamp, France"></a></li>
-            				<li class="container-img"><a href="#slide3"><img src="img/westerpark.jpg" alt="Westerpark"></a></li>
+            				<li class="container-img">
+                      <a href="http://www.firewalkwithus.com">
+                        <img src="img/fwwu-com.jpg" alt="firewalkwithus.com <a href='http://www.firewalkwithus.com'>» go!</a>">
+                      </a>
+                    </li>
+            				<li class="container-img"><a href="#slide2"><img src="img/fwwu-fecamp2.jpeg" alt="Fecamp, Normandy, France"></a></li>
+            				<li class="container-img"><a href="#slide3"><img src="img/westerpark.jpg" alt="Westerpark, Amsterdam"></a></li>
             	    </ul>
         			</article>
         		</section>
@@ -55,9 +59,9 @@
         <footer class="theme-grey grid grid-item">
           <div class="footer-content">
             <ul>
-              <li><a href="#" class="nav-social"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
-              <li><a href="#" class="nav-social"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
-              <li><a href="#" class="nav-social"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
+              <li><a href="https://www.facebook.com/NicoNijland" class="nav-social"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+              <li><a href="https://nl.linkedin.com/in/nico-nijland" class="nav-social"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a></li>
+              <li><a href="https://github.com/nijlanderthaler" class="nav-social"><i class="fa fa-github-square" aria-hidden="true"></i></a></li>
             </ul>
           </div>
        </footer>
